k8s-manifests/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poinz-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poinz-server
  template:
    metadata:
      labels:
        app: poinz-server
    spec:
      containers:
        - name: poinz-server
          image: woixi/poinz:server  
          ports:
            - containerPort: 3000  
---
apiVersion: v1
kind: Service
metadata:
  name: poinz-server-service
spec:
  selector:
    app: poinz-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
