k8s-manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poinz-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "poinz-server-service" # Для WebSocket
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - poinz.local
      secretName: poinz-tls-secret
  rules:
    - host: poinz.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: poinz-server-service
                port:
                  number: 3000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: poinz-server-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poinz-client-service
                port:
                  number: 9000
